Improvements about connection with serp api
